# stockpile

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/mcps/: Makefile
.claude/mcps/ticker-cache/: .gitignore  .mcpbignore  Makefile  README.md  main.py  manifest.json  pyproject.toml  requirements.txt  server.py
.claude/skills/: Makefile
.claude/skills/stock-clusters/: SKILL.md  reference.md
.claude/skills/stock-clusters/scripts/: stock_clusters.py
.claude/skills/ticker/: SKILL.md  reference.md
.claude/skills/ticker/scripts/: ticker.py
